Fixed menu items that wrapped looking like other menu items

--- a/search-and-go-child/sass/style.scss
+++ b/search-and-go-child/sass/style.scss
@@ -54,6 +54,11 @@ footer .eltd-footer-inner {
 
 }
 
+.eltd-drop-down .second .inner ul li a {
+	line-height: 20px;
+	padding: 7px 0px;
+}
+
 /* Circular type buttons on homepage */
 .eltd-listing-search-holder .eltd-listing-search-categories-holder .eltd-listing-search-category-link {
 	background-color: rgba( 0, 0, 0, .7);
